@@ -1,4 +1,4 @@
-module ContinueToParams
+module ContinueParams
   extend ActiveSupport::Concern
 
   def continue_params
@@ -6,7 +6,7 @@ module ContinueToParams
     return nil unless continue_params
 
     continue_params       = continue_params.permit(:to, :notice, :notice_now)
-    continue_params[:to]  = root_url unless continue_params[:to].start_with?('/')
+    return unless continue_params[:to] && continue_params[:to].start_with?('/')
 
     continue_params
   end
